changes maded by sumi

--- a/vijay.html
+++ b/vijay.html
@@ -9,5 +9,7 @@
     <h1>VIJAY</h1>
     <hr>
     <p>this change to maded by simi</p>
+    <hr>
+    <p>this chage maded by Sumi</p>
 </body>
 </html>
